results/SpecGenBench/2-shot/log-ReverseArray-2023_11_28_02_55_43.txt
public class ReverseArray {
    //@ requires original != null;
    //@ ensures \result != null && \result.length == original.length;
    //@ ensures (\forall int i; 0 <= i && i < original.length; \result[i] == original[original.length - i - 1]);
    public static int[] reverse(int[] original) {
        int n = original.length;
        int[] res = new int[n];
        //@ maintaining (\forall int i; 0 <= i && i < n; res[i] == original[n - i - 1]);
        //@ maintaining 0 <= n && n <= original.length;
        //@ decreases n;
        for(int i = 0; i < n ; i++) {
            res[i] = original[n - i - 1];
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/ReverseArray.java:8: error: variable i is already defined in method reverse(int[])
        //@ maintaining (\forall int i; 0 <= i && i < n; res[i] == original[n - i - 1]);
                                     ^
1 error

